# simple-chat

./: Cargo.toml  pre-commit
.github/workflows/: commit-checks.yml
simple-chat-client/: Cargo.toml
simple-chat-client/src/: lib.rs  main.rs
simple-chat-client/tests/: integration_test.rs
simple-chat-server/: Cargo.toml
simple-chat-server/src/: lib.rs  main.rs
simple-chat-shared/: Cargo.toml
simple-chat-shared/src/: lib.rs
