[package]
name = "simple-chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.35"
clap = { version = "4.5.9", features = ["derive"] }
env_logger = "0.11.3"
futures = { version = "0.3.30" }
futures-util = { version = "0.3.30", features = ["sink"] }
log = "0.4.22"
serde = "1.0.204"
serde_json = "1.0.120"
simple-chat-shared = { path = "../simple-chat-shared" }
tokio = { version = "1.38.1", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"]}
tokio-util = { version = "0.7.11", features = ["codec"] }